Fix scrollbars in middle office

--- a/src/styles/_middle-office.scss
+++ b/src/styles/_middle-office.scss
@@ -23,7 +23,7 @@ $field-size: 25px;
   top: 0;
   left: 0;
   bottom: $window-footer-size;
-  width: 100%;
+  right: 2px;
   background-color: $light-color;
   z-index: 1;
 
@@ -66,17 +66,24 @@ $field-size: 25px;
   }
 
   .right-panel {
+    display: flex;
     flex-basis: 800px;
     border-left: 1px solid $table-border-color;
     background-color: $background-color;
     border-top: 1px solid $table-border-color;
     margin-top: -1px;
+    max-height: 100%;
 
     .container {
       position: relative;
-      height: 100%;
+
+      max-height: 100%;
+      overflow: auto;
+      flex: 5;
 
       &:first-child {
+        flex: 7;
+
         .form-group {
           background-color: $background-color;
 
